--- a/_sass/product-column-layout.scss
+++ b/_sass/product-column-layout.scss
@@ -14,7 +14,7 @@ div.column-layout {
 			padding: 0px;
 
 			& > li {
-				padding: 10px 1em;
+				padding: 10px 0.8em;
 				position: relative;
 				box-sizing: border-box;
 
